--- a/pom.xml
+++ b/pom.xml
@@ -10,11 +10,13 @@
 
     <dependencies>
         <!-- JPA 하이버네이트 -->
+        <!-- https://mvnrepository.com/artifact/org.hibernate/hibernate-core -->
         <dependency>
             <groupId>org.hibernate</groupId>
-            <artifactId>hibernate-entitymanager</artifactId>
-            <version>5.3.10.Final</version>
+            <artifactId>hibernate-core</artifactId>
+            <version>5.6.10.Final</version>
         </dependency>
+
         <!-- H2 데이터베이스 -->
         <dependency>
             <groupId>com.h2database</groupId>
